--- a/public/main.css
+++ b/public/main.css
@@ -8,6 +8,7 @@ html,body,#root{width:100%;height: 100%;}
     align-content: center;
     align-items: center;
     height: 100%;
+    padding: 15px;
 }
 
 .flex_content_center .flex_item{
@@ -24,3 +25,8 @@ html,body,#root{width:100%;height: 100%;}
 #wrapper_todo h1{
     margin-top:0;font-size:18px;margin-bottom:15px;
 }
+
+.cont-btn-search {display: table;width: 100%;}
+.cont-btn-search label{display: block;width: 100%;}
+.cont-btn-search input[type*=text]{width: calc(100% - 34px);float:left;border-top-right-radius:0;border-bottom-right-radius:0;display: inline-block;}
+.cont-btn-search button{float:left;border-top-left-radius:0;border-bottom-left-radius:0;display: inline-block;width: 34px;}
